--- a/.github/workflows/auth.yml
+++ b/.github/workflows/auth.yml
@@ -1,18 +1,18 @@
-name: deploy-marketing
+name: deploy-auth
 
 # Set up the events that trigger the workflow
 on:
   push:
     branches:
       - main
-    # Watch only the marketing folder
+    # Watch only the auth folder
     paths:
-      - "packages/marketing/**"
+      - "packages/auth/**"
 
-# Set the execution env inside the marketing folder
+# Set the execution env inside the auth folder
 defaults:
   run:
-    working-directory: packages/marketing
+    working-directory: packages/auth
 
 # Set what should happen
 jobs:
@@ -25,12 +25,12 @@ jobs:
       - run: npm run build
 
       - uses: shinyinc/action-aws-cli@v1.2
-      - run: aws s3 sync dist s3://${{ secrets.AWS_S3_BUCKET_NAME }}/marketing/latest
+      - run: aws s3 sync dist s3://${{ secrets.AWS_S3_BUCKET_NAME }}/auth/latest
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_DEFAULT_REGION: eu-central-1
-      - run: aws cloudfront create-invalidation --distribution-id ${{ secrets.AWS_DISTRIBUTION_ID }} --paths "/auth/latest/remoteEntry.js"
+      - run: aws cloudfront create-invalidation --distribution-id ${{ secrets.AWS_DISTRIBUTION_ID }} --paths "/marketing/latest/remoteEntry.js"
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
